auth-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/crookedrealm: "true"
    io.kompose.service: auth
  name: auth
spec:
  containers:
    - image: dreamrealm/authmicroservice:v1
      name: dreamrealm-auth
      ports:
        - containerPort: 8082
      resources: {}
  restartPolicy: OnFailure
status: {}
