gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: gateway
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/crookedrealm: "true"
        io.kompose.service: gateway
    spec:
      containers:
        - env:
            - name: SPRING_PROFILES_ACTIVE
              value: kubernetes
          image: dreamrealm/gateway:v1
          imagePullPolicy: Always
          name: gateway
          ports:
            - containerPort: 80
          resources: {}
      restartPolicy: Always
status: {}
