mysqlserver-messages-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: Kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlserver-messages
  name: mysqlserver-messages
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlserver-messages
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: Kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/crookedrealm: "true"
        io.kompose.service: mysqlserver-messages
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "true"
            - name: MYSQL_DATABASE
              value: messages
            - name: MYSQL_PASSWORD
              value: example
            - name: MYSQL_ROOT_PASSWORD
              value: example
            - name: MYSQL_TCP_PORT
              value: "3306"
            - name: MYSQL_USER
              value: dreamrealm
          image: mysql:8.0
          name: mysql-messages
          ports:
            - containerPort: 3306
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data
            - mountPath: /etc/mysql/conf.d
              name: mysql-config
      restartPolicy: Always
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: mysql-data
        - name: mysql-config
          persistentVolumeClaim:
            claimName: mysql-config
status: {}
