mysqlserver-tradingtwo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlserver-tradingtwo
  name: mysqlserver-tradingtwo
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysqlserver-tradingtwo
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.26.0 (40646f47)
      creationTimestamp: null
      labels:
        io.kompose.network/crookedrealm: "true"
        io.kompose.service: mysqlserver-tradingtwo
    spec:
      containers:
        - env:
            - name: MYSQL_ALLOW_EMPTY_PASSWORD
              value: "true"
            - name: MYSQL_DATABASE
              value: trading
            - name: MYSQL_PASSWORD
              value: example
            - name: MYSQL_ROOT_PASSWORD
              value: example
            - name: MYSQL_TCP_PORT
              value: "3309"
            - name: MYSQL_USER
              value: dreamrealm
          image: mysql:8.0
          name: mysqlserver-tradingtwo
          ports:
            - containerPort: 3309
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-data-trading
            - mountPath: /etc/mysql/conf.d
              name: mysql-config-trading
      restartPolicy: Always
      volumes:
        - name: mysql-data-trading
          persistentVolumeClaim:
            claimName: mysql-data-trading
        - name: mysql-config-trading
          persistentVolumeClaim:
            claimName: mysql-config-trading
status: {}
