trading-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
  template:
    metadata:
      labels:
        app: trading
    spec:
      containers:
        - name: trading
          image: dreamrealm/tradingmicroservice:v1
          imagePullPolicy: Always
