trading-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: Kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/crookedrealm: "true"
    io.kompose.service: trading
  name: trading
spec:
  containers:
    - env:
        - name: SPRING_RABBITMQ_HOST
          value: rabbitmq
      image: dreamrealm/tradingmicroservice:v1
      imagePullPolicy: Always
      name: dreamrealm-trading
      ports:
        - containerPort: 8083
      resources: {}
  restartPolicy: OnFailure
status: {}
