tradingtwo-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.network/crookedrealm: "true"
    io.kompose.service: tradingtwo
  name: tradingtwo
spec:
  containers:
    - image: dreamrealm/tradingtwomicroservice:v1
      name: dreamrealm-tradingtwo
      ports:
        - containerPort: 8084
      resources: {}
  restartPolicy: OnFailure
status: {}
