mysqlserver-auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlserver-auth
  name: mysqlserver-auth
spec:
  ports:
    - name: "3308"
      port: 3308
      targetPort: 3308
  selector:
    io.kompose.service: mysqlserver-auth
status:
  loadBalancer: {}
