mysqlserver-tradingtwo-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: mysqlserver-tradingtwo
  name: mysqlserver-tradingtwo
spec:
  ports:
    - name: "3309"
      port: 3309
      targetPort: 3309
  selector:
    io.kompose.service: mysqlserver-tradingtwo
status:
  loadBalancer: {}
