trading-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trading-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trading
  template:
    metadata:
      labels:
        app: trading
    spec:
      containers:
        - name: trading
          image: dreamrealm/tradingmicroservice:v1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: Kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: trading
  name: trading
spec:
  ports:
    - name: "8083"
      port: 8083
      targetPort: 8083
  selector:
    io.kompose.service: trading
status:
  loadBalancer: {}
