tradingtwo-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradingtwo-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tradingtwo
  template:
    metadata:
      labels:
        app: tradingtwo
    spec:
      containers:
        - name: tradingtwo
          image: dreamrealm/tradingtwomicroservice:v1
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.26.0 (40646f47)
  creationTimestamp: null
  labels:
    io.kompose.service: tradingtwo
  name: tradingtwo
spec:
  ports:
    - name: "8084"
      port: 8084
      targetPort: 8084
  selector:
    io.kompose.service: tradingtwo
status:
  loadBalancer: {}
